# poke-api-mcp

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  server.py
backend/: .env.example  Dockerfile  erro.html  pyproject.toml  requirements.txt
backend/cache/: pokemon_details_10.json  pokemon_details_100.json  pokemon_details_101.json  pokemon_details_102.json  pokemon_details_103.json  pokemon_details_104.json  pokemon_details_105.json  pokemon_details_106.json  pokemon_details_107.json  pokemon_details_108.json  pokemon_details_109.json  pokemon_details_11.json  pokemon_details_110.json  pokemon_details_111.json  pokemon_details_112.json  pokemon_details_113.json  pokemon_details_114.json  pokemon_details_115.json  pokemon_details_116.json  pokemon_details_117.json  pokemon_details_118.json  pokemon_details_119.json  pokemon_details_12.json  pokemon_details_120.json  pokemon_details_13.json  pokemon_details_14.json  pokemon_details_15.json  pokemon_details_16.json  pokemon_details_17.json  pokemon_details_18.json  pokemon_details_19.json  pokemon_details_2.json  pokemon_details_20.json  pokemon_details_21.json  pokemon_details_22.json  pokemon_details_23.json  pokemon_details_24.json  pokemon_details_25.json  pokemon_details_26.json  pokemon_details_27.json  (+85 more)
backend/relatorios/: analise_tipos.csv  top_experiencia.csv
backend/src/: config.py  loterias.py  resultados.py  server-sse.py  server.py
backend/src/controllers/: data_extractor.py  reporter.py  transformer.py
frontend/: Dockerfile  (+2 more)
(+20 files in other folders)
